--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -82,19 +82,21 @@
     cursor: pointer;
 
     -webkit-tap-highlight-color: transparent;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .asort-sectiom-list .asort-card .text-box .buy-btn:hover,
 .asort-sectiom-list .asort-card .text-box .buy-btn:focus {
     color: #113916;
-    background: transparent;
+    background-color: transparent;
 }
 
 .asort-sectiom-list .asort-card .text-box .buy-btn:active {
     color: #113916;
     border: transparent;
-    background: transparent;
+    background-color: transparent;
 }
 
 /* Tablet */
