--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -25,8 +25,8 @@
           />
           <img
             class="glr-img"
-            src="src/img/gallery/img1.webp"
-            alt="EcoBag Classic"
+            src="/img/gallery/img1.webp"
+            alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
           />
         </picture>
       </li>
@@ -52,8 +52,8 @@
           />
           <img
             class="glr-img"
-            src="/src/img/gallery/img2.webp"
-            alt="EcoBag Classic"
+            src="/img/gallery/img2.webp"
+            alt="A city scene where a stylish person carries a tote bag while crossing a street or standing at a crosswalk. Urban backdrop, bicycles, pedestrians, and modern architecture in the background. The bag is modern, clean, and fashionable."
           />
         </picture>
       </li>
@@ -79,8 +79,8 @@
           />
           <img
             class="glr-img"
-            src="/src/img/gallery/img3.webp"
-            alt="EcoBag Classic"
+            src="/img/gallery/img3.webp"
+            alt="A person walking through a park or nature trail carrying an eco-friendly tote bag on their shoulder. Casual outfit, spring or summer scenery, with trees, grass, and soft shadows. The bag moves naturally as part of the lifestyle moment."
           />
         </picture>
       </li>
@@ -106,8 +106,8 @@
           />
           <img
             class="glr-img"
-            src="/src/img/gallery/img4.webp"
-            alt="EcoBag Classic"
+            src="/img/gallery/img4.webp"
+            alt="A young woman holding a large eco tote bag filled with fresh vegetables and fruits at a local farmer's market. Warm sunlight, cozy atmosphere, background with wooden crates and greenery. The tote has a simple, natural design."
           />
         </picture>
       </li>
