--- a/src/css/header.css
+++ b/src/css/header.css
@@ -182,6 +182,11 @@
             /*====================== Desktop ======================*/
 
 @media screen and (min-width: 1440px) {
+.burger-btn,
+.mobile-menu {
+    display: none;   
+}
+
 .header {
     padding: 23px 0;
 }
@@ -235,5 +240,13 @@
 
 .header-address-item {
     transition: transform 0.3s ease;       
+}
+
+.header-address-item:hover {
+    transform: scale(1.08);
+}
+
+.header-address-item:active {
+    transform: scale(1.02);
 }
 }
