--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header-container">
         <div class="header-logo">
-            <a href="/" class="header-nav-logo-link">
+            <a href="/Project_Alpha/" class="header-nav-logo-link">
                 <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
                     <use href="/img/logo.svg#icon-logo"></use>
                 </svg>
@@ -39,7 +39,7 @@
     <div class="mobile-menu-container">
         <div class="mobile-menu-top">
             <div class="mobile-menu-logo">
-                <a href="/" class="mobile-nav-logo-link">
+                <a href="/Project_Alpha/" class="mobile-nav-logo-link">
                     <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
                         <use href="/img/logo.svg#icon-logo"></use>
                     </svg>
