--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -49,3 +49,44 @@
 .hero-img {
   border-radius: 40px;
 }
+
+/* tablet */
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 32px;
+    padding-bottom: 64px;
+  }
+  .hero-text {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    max-width: 704px;
+    width: 100%;
+    margin: 0 auto 20px;
+  }
+
+  .hero-title {
+    flex: 1;
+    margin-bottom: 0;
+  }
+
+  .hero-description-block {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .hero-description {
+    font-size: 18px;
+    margin-bottom: 32px;
+  }
+
+  .hero-button {
+    white-space: nowrap;
+    width: 148px;
+  }
+  .hero-img {
+    width: 100%;
+  }
+}
