--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,11 +2,13 @@
   <div class="container hero-container">
     <div class="hero-text">
       <h1 class="hero-title">EcoTote — Стиль, що не шкодить планеті</h1>
-      <p class="hero-description">
-        Екологічні сумки для тих, хто дбає про майбутнє. Обирайте стиль та
-        відповідальність разом з EcoTote.
-      </p>
-      <a href="#assortment" class="hero-button">Купити зараз</a>
+      <div class="hero-description-block">
+        <p class="hero-description">
+          Екологічні сумки для тих, хто дбає про майбутнє. Обирайте стиль та
+          відповідальність разом з EcoTote.
+        </p>
+        <a href="#assortment" class="hero-button">Купити зараз</a>
+      </div>
     </div>
     <picture>
       <source
