--- a/src/css/support.css
+++ b/src/css/support.css
@@ -118,6 +118,9 @@
     line-height: 1.6;
     color: #fff;
     cursor: pointer;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-form:hover,
