--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -32,7 +32,7 @@
   padding: 12px 24px;
   width: 288px;
   height: 50px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -89,5 +89,14 @@
   }
   .hero-img {
     width: 100%;
+  }
+}
+/* desktop */
+@media screen and (min-width: 1440px) {
+  .hero-text {
+    max-width: 1312px;
+  }
+  .hero-title {
+    font-size: 56px;
   }
 }
