--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header-container">
         <div class="header-logo">
-            <a href="/Project_Alpha/" class="header-nav-logo-link">
+            <a href="/Project_Alpha/" class="header-nav-logo-link" aria-label="header-logo-link">
                 <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
                     <use href="/img/logo.svg#icon-logo"></use>
                 </svg>
@@ -28,7 +28,7 @@
             </address>
 
             <button class="burger-btn" type="button" data-main-open>
-                <svg  class="burger-icon" viewBox="0 0 32 32">
+                <svg  class="burger-icon" viewBox="0 0 32 32" aria-label="Open mobile menu">
                     <use href="/img/sprite.svg#icon-menu"></use>
                 </svg>
             </button> 
@@ -39,7 +39,7 @@
     <div class="mobile-menu-container">
         <div class="mobile-menu-top">
             <div class="mobile-menu-logo">
-                <a href="/Project_Alpha/" class="mobile-nav-logo-link">
+                <a href="/Project_Alpha/" class="mobile-nav-logo-link" aria-label="mobile-logo-link">
                     <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
                         <use href="/img/logo.svg#icon-logo"></use>n
                     </svg>
@@ -47,7 +47,7 @@
             </div>
 
         <button class="mobile-close-button" type="button" data-main-close>
-            <svg class="mobile-close-icon" viewBox="0 0 16 16">
+            <svg class="mobile-close-icon" viewBox="0 0 16 16" aria-label="Close mobile menu">
                 <use href="/img/sprite.svg#icon-close"></use>
             </svg>
         </button>
