--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section id="advantages" class="advantages">
   <div class="container">
     <div class="advantages-box">
       <h3 class="advantages-subtitles">Переваги</h3>
