--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,25 +2,25 @@
   <div class="container glr-container">
     <h2 class="glr-title">Галерея зображень</h2>
     <h3 class="glr-txt">EcoTotes у повсякденному житті</h3>
-    <h3 class="glr-txt">EcoTotes у повсякденному житті</h3>
+
     <ul class="glr-list">
       <li class="glr-item glr-item-1">
-        <picture>
+        <picture class="glr-pic">
           <source
-            srcset="/img/gallery/img1.webp 1x, /img/gallery/img1@x2.webp 2x"
+            srcset="/img/gallery/img1.webp 1x, /img/gallery/img1@2x.webp 2x"
             media="(min-width: 1440px)"
           />
           <source
             srcset="
               /img/gallery/img-tab1.webp    1x,
-              /img/gallery/img-tab1@x2.webp 2x
+              /img/gallery/img-tab1@2x.webp 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
               /img/gallery/img-mob1.webp    1x,
-              /img/gallery/img-mob1@x2.webp 2x
+              /img/gallery/img-mob1@2x.webp 2x
             "
             media="(max-width: 767px)"
           />
@@ -34,20 +34,20 @@
       <li class="glr-item glr-item-2">
         <picture>
           <source
-            srcset="/img/gallery/img2.webp 1x, /img/gallery/img2@x2.webp 2x"
+            srcset="/img/gallery/img2.webp 1x, /img/gallery/img2@2x.webp 2x"
             media="(min-width: 1440px)"
           />
           <source
             srcset="
               /img/gallery/img-tab2.webp    1x,
-              /img/gallery/img-tab2@x2.webp 2x
+              /img/gallery/img-tab2@2x.webp 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
               /img/gallery/img-mob2.webp    1x,
-              /img/gallery/img-mob2@x2.webp 2x
+              /img/gallery/img-mob2@2x.webp 2x
             "
             media="(max-width: 767px)"
           />
@@ -61,20 +61,21 @@
       <li class="glr-item glr-item-3">
         <picture>
           <source
-            srcset="/img/gallery/img3.webp 1x, /img/gallery/img3@x2.webp 2x"
+            srcset="/img/gallery/img3.webp 1x, /img/gallery/img3@2x.webp 2x"
             media="(min-width: 1440px)"
           />
           <source
             srcset="
               /img/gallery/img-tab3.webp    1x,
-              /img/gallery/img-tab3@x2.webp 2x
+              /img/gallery/img-tab3@2x.webp 2x
             "
             media="(min-width: 768px)"
           />
+
           <source
             srcset="
               /img/gallery/img-mob3.webp    1x,
-              /img/gallery/img-mob3@x2.webp 2x
+              /img/gallery/img-mob3@2x.webp 2x
             "
             media="(max-width: 767px)"
           />
@@ -88,20 +89,20 @@
       <li class="glr-item glr-item-4">
         <picture>
           <source
-            srcset="/img/gallery/img4.webp 1x, /img/gallery/img4@x2.webp 2x"
+            srcset="/img/gallery/img4.webp 1x, /img/gallery/img4@2x.webp 2x"
             media="(min-width: 1440px)"
           />
           <source
             srcset="
               /img/gallery/img-tab4.webp    1x,
-              /img/gallery/img-tab4@x2.webp 2x
+              /img/gallery/img-tab4@2x.webp 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
               /img/gallery/img-mob4.webp    1x,
-              /img/gallery/img-mob4@x2.webp 2x
+              /img/gallery/img-mob4@2x.webp 2x
             "
             media="(max-width: 767px)"
           />
