--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -41,6 +41,10 @@
   width: 100%;
   border-radius: 45px;
 }
+glr-pic {
+  width: 288px;
+  height: 288px;
+}
 /* ---------------tablet version--------------------------- */
 
 @media screen and (min-width: 768px) {
