--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -70,9 +70,8 @@
     font-size: 16px;
     color: #fff;
 
-    border: 1px solid #113916;
-    background: #113916;
-    opacity: 0.6;
+    border: 1px solid #030a06;
+    background-color: #030a06;
 
     border-radius: 6px;
     padding: 8px 20px;
@@ -89,12 +88,12 @@
 
 .asort-sectiom-list .asort-card .text-box .buy-btn:hover,
 .asort-sectiom-list .asort-card .text-box .buy-btn:focus {
-    color: #113916;
+    color: #030a06;
     background-color: transparent;
 }
 
 .asort-sectiom-list .asort-card .text-box .buy-btn:active {
-    color: #113916;
+    color: #030a06;
     border: transparent;
     background-color: transparent;
 }
