--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -34,7 +34,7 @@
           <p class="feedback-text">
             Сумка дуже зручна та стильна, використовую щодня!
           </p>
-          <h3 class="feedback-client-name">Анна</h3>
+          <p class="feedback-client-name">Анна</p>
         </div>
       </li>
       <li class="feedback-item">
@@ -69,7 +69,7 @@
           <p class="feedback-text">
             Відмінна якість матеріалів, приємно здивована.
           </p>
-          <h3 class="feedback-client-name">Ігор</h3>
+          <p class="feedback-client-name">Ігор</p>
         </div>
       </li>
       <li>
@@ -104,7 +104,7 @@
           <p class="feedback-text">
             Сумка повністю відповідає опису, рекомендую!
           </p>
-          <h3 class="feedback-client-name">Олена</h3>
+          <p class="feedback-client-name">Олена</p>
         </div>
       </li>
       <li>
@@ -137,7 +137,7 @@
             </li>
           </ul>
           <p class="feedback-text">Швидка доставка та гарне обслуговування.</p>
-          <h3 class="feedback-client-name">Сергій</h3>
+          <p class="feedback-client-name">Сергій</p>
         </div>
       </li>
     </ul>
