--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,7 +23,7 @@
         "
       />
       <source
-        media="(min-width: 320px)"
+        media="(max-width: 767px)"
         srcset="
           /img/hero/hero-img-mob.webp    1x,
           /img/hero/hero-img-mob@2x.webp 2x
