--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -24,14 +24,14 @@
 .hero-button {
   display: inline-block;
   text-align: center;
-  border: 1px solid transparent;
-  background-color: #113916;
-  opacity: 0.6;
+  border: 1px solid #030a06;
+  background-color: #030a06;
   color: #fff;
   border-radius: 6px;
   padding: 12px 24px;
   width: 288px;
   height: 50px;
+  -webkit-tap-highlight-color: transparent;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -39,12 +39,12 @@
 .hero-button:hover,
 .hero-button:focus {
   background-color: transparent;
-  color: #113916;
-  border: 1px solid #113916;
+  color: #030a06;
+  border: 1px solid #030a06;
 }
 .hero-button:active {
   background-color: transparent;
-  color: #113916;
+  color: #030a06;
   border: none;
 }
 .hero-img {
