--- a/src/css/support.css
+++ b/src/css/support.css
@@ -106,9 +106,8 @@
 }
 
 .button-form {
-    border: 1px solid #113916;
-    background-color: #113916;
-    opacity: 0.6;
+    border: 1px solid #030a06;
+    background-color: #030a06;
     border-radius: 6px;
     width: 288px;
     height: 50px;
@@ -126,13 +125,13 @@
 .button-form:hover,
 .button-form:focus {
     background-color: transparent;
-    color: #113916;
-    border: 1px solid #113916;
+    color: #030a06;
+    border: 1px solid #030a06;
 }
 
 .button-form:active {
     background-color: transparent;
-    color: #113916;
+    color: #030a06;
     border: none;
 }
 
