--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,14 +34,14 @@
             </button> 
     </div>
 
-    <!----- Mobile Menu ----->
+    <!-- Mobile Menu -->
 <div class="mobile-menu" data-main>
     <div class="mobile-menu-container">
         <div class="mobile-menu-top">
             <div class="mobile-menu-logo">
                 <a href="/Project_Alpha/" class="mobile-nav-logo-link" aria-label="mobile-logo-link">
                     <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
-                        <use href="/img/logo.svg#icon-logo"></use>n
+                        <use href="/img/logo.svg#icon-logo"></use>
                     </svg>
                 </a>
             </div>
@@ -74,5 +74,5 @@
         </div>
         </div>
     </div>
-    <!----- Mobile Menu End ----->
+    <!-- Mobile Menu End -->
 </header>
