correct svg logo

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,9 +2,9 @@
   <div class="container footer-container">
     
     <nav class="footer-navigation">
-      <a href="#" class="footer-logo-link" aria-label="footer-logo-link">
-        <svg class="footer-logo" width="273" height="102">
-          <use href="/img/logo.svg#icon-logo"></use>
+      <a href="#" class="footer-logo-link" >
+        <svg class="footer-logo" viewBox="0 0 104 39" aria-label="EcoTote logo">
+          <use href="/img/logo.svg"></use>
         </svg>
       </a>
   
