--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
         <div class="header-logo">
             <a href="/Project_Alpha/" class="header-nav-logo-link" aria-label="header-logo-link">
                 <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
-                    <use href="/img/logo.svg#icon-logo"></use>
+                    <use href="/img/logo.svg"></use>
                 </svg>
             </a>
         </div>
@@ -41,7 +41,7 @@
             <div class="mobile-menu-logo">
                 <a href="/Project_Alpha/" class="mobile-nav-logo-link" aria-label="mobile-logo-link">
                     <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
-                        <use href="/img/logo.svg#icon-logo"></use>
+                        <use href="/img/logo.svg"></use>
                     </svg>
                 </a>
             </div>
