--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     
     <nav class="footer-navigation">
       <a href="#" class="footer-logo-link" >
-        <svg class="footer-logo" viewBox="0 0 104 39" aria-label="EcoTote logo">
+        <svg class="footer-logo"  aria-label="EcoTote logo">
           <use href="/img/logo.svg"></use>
         </svg>
       </a>
