--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,9 +3,7 @@
     
     <nav class="footer-navigation">
       <a href="#" class="footer-logo-link" >
-        <svg class="footer-logo"  aria-label="EcoTote logo">
-          <use href="/img/logo.svg"></use>
-        </svg>
+        <img src="/img/logo.svg" class="footer-logo" alt="">
       </a>
   
       <ul class="footer-nav">
