--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,9 +2,7 @@
     <div class="container header-container">
         <div class="header-logo">
             <a href="/Project_Alpha/" class="header-nav-logo-link" aria-label="header-logo-link">
-                <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
-                    <use href="/img/logo.svg"></use>
-                </svg>
+                <img src="/img/logo.svg" class="header-nav-logo-svg" width="82" height="31" alt="">
             </a>
         </div>
     <nav class="header-nav">
@@ -40,9 +38,7 @@
         <div class="mobile-menu-top">
             <div class="mobile-menu-logo">
                 <a href="/Project_Alpha/" class="mobile-nav-logo-link" aria-label="mobile-logo-link">
-                    <svg class="header-nav-logo-svg" viewBox="0 0 104 39">
-                        <use href="/img/logo.svg"></use>
-                    </svg>
+                    <img src="/img/logo.svg" class="header-nav-logo-svg" width="82" height="31" alt="">
                 </a>
             </div>
 
