--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -101,7 +101,7 @@
 }
 
 .footer-logo {
-  width: 164px;
+  width: auto;
   height: 70px;
 }
 
@@ -155,8 +155,8 @@
 }
 
 .footer-social-icon {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
 }
 
 }
