--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,10 +37,10 @@
     height: 32px;
 }
 
-.header-nav-logo-svg {
+/* .header-nav-logo-svg {
     width: 82px;
     height: 31px;
-}
+} */
 
 .header-nav-logo-link {
     -webkit-tap-highlight-color: transparent;
@@ -212,18 +212,6 @@
     list-style: none;
 }
 
-.header-nav-link {
-    transition: transform 0.3s ease;
-}
-
-.header-nav-link:hover {
-    transform: scale(1.01);
-}
-
-.header-nav-link:active {
-    transform: scale(1.02);
-}
-
 .header-address {
     display: flex;
     justify-content: flex-end;
@@ -236,17 +224,5 @@
     gap: 16px;
     list-style: none;
     font-style: normal;
-}
-
-.header-address-link {
-    transition: transform 0.3s ease;       
-}
-
-.header-address-link:hover {
-    transform: scale(1.08);
-}
-
-.header-address-link:active {
-    transform: scale(1.02);
 }
 }
